@@ -25,7 +25,6 @@ import java.util.ListIterator;
 
 import io.realm.exceptions.RealmException;
 import io.realm.internal.ColumnType;
-import io.realm.internal.Table;
 import io.realm.internal.TableOrView;
 import io.realm.internal.TableView;
 
@@ -49,7 +48,7 @@ public class RealmResults<E extends RealmObject> extends AbstractList<E> {
     private TableOrView table = null;
 
     public static final boolean SORT_ORDER_ASCENDING = true;
-    public static final boolean SORT_ORDER_DECENDING = false;
+    public static final boolean SORT_ORDER_DESCENDING = false;
 
     private static final String TYPE_MISMATCH = "Field '%s': type mismatch - %s expected.";
     private long currentTableViewVersion = -1;
@@ -162,45 +161,36 @@ public class RealmResults<E extends RealmObject> extends AbstractList<E> {
     // Sorting
 
     /**
-     * Get a sorted (ascending) RealmList from an existing @{link io.realm.RealmList}.
+     * Sort (ascending) an existing @{link io.realm.RealmList}.
      * Only fields of type boolean, short, int, long, float, double, Date, and String are supported.
      * 
      * @param fieldName  The field name to sort by.
-     * @return           A sorted RealmResults list
      */
-    public RealmResults<E> sort(String fieldName) {
-        return sort(fieldName, SORT_ORDER_ASCENDING);
+    public void sort(String fieldName) {
+        this.sort(fieldName, SORT_ORDER_ASCENDING);
     }
 
     /**
-     * Get a sorted RealmList from an existing @{link io.realm.RealmList}.
+     * Sort existing @{link io.realm.RealmList}.
      * Only fields of type boolean, short, int, long, float, double, Date, and String are supported.
      *
      * @param fieldName      The field name to sort by.
      * @param sortAscending  The direction to sort by; if true ascending, otherwise descending
-     *                       You can use the constants SORT_ORDER_ASCENDING and SORT_ORDER_DECENDING
+     *                       You can use the constants SORT_ORDER_ASCENDING and SORT_ORDER_DESCENDING
      *                       for readability.
-     * @return               A sorted RealmResults list.
      */
-    public RealmResults<E> sort(String fieldName, boolean sortAscending) {
-        TableView sorted;
-
+    public void sort(String fieldName, boolean sortAscending) {
         realm.checkIfValid();
         TableOrView table = getTable();
-        long columnIndex = table.getColumnIndex(fieldName);
-        TableView.Order TVOrder = sortAscending ? TableView.Order.ascending : TableView.Order.descending;
 
         if (table instanceof TableView) {
-            TableView v = (TableView)table;
-            sorted = v.where().findAll();
-            sorted.sort(columnIndex, TVOrder);
+            long columnIndex = table.getColumnIndex(fieldName);
+            TableView.Order TVOrder = sortAscending ? TableView.Order.ascending : TableView.Order.descending;
+            ((TableView) table).sort(columnIndex, TVOrder);
         }
         else {
-            Table t = (Table)table;
-            sorted = t.getSortedView(columnIndex, TVOrder);
+            throw new IllegalArgumentException("Please use allObject().");
         }
-
-        return new RealmResults<E>(realm, sorted, classSpec);
     }
 
 
